@@ -1,3 +1,8 @@
+2022-07-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/tests/bug-3459.c:
+	  An attempt at creating a regression test for bug #3459.
+
 2022-07-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* support/regression/MakeList:
